# lidarpy

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: docs.yml  publish-package.yml  tests.yml
docs/: contributing.html  examples.html  getting-started.html  index.html  migrated_lidar_flow.md  operations.html  processing-workflow.html  references.html  references.md
docs/assets/: site.css
scripts/: build_docs.py  generate_docs_figures.py
src/lidarpy/: __init__.py
src/lidarpy/atmo/: __init__.py  atmo.py  ecmwf.py  freudenthaler_molecular_properties.py  rayleigh.py  solar.py
src/lidarpy/depolarization/: GHK.py  calibration.py  io.py  plot.py  retrieval.py  utils.py
src/lidarpy/depolarization/deprecated/: depolarization_calibration_mhc_pasar_a_info_file.py
src/lidarpy/general_utils/: __init__.py  calibration.py  dates.py  email.py  fitting.py  io.py  numerics.py  plot.py  smoothing.py  utils.py
src/lidarpy/info/: info_alh_20221117.yml  info_alh_20230828.yml  info_alh_20241119.yml  info_alh_20241125.yml  info_alh_20250329.yml  info_gnl_20241118.yml  info_ipr_20180101.yml  info_lidars.yml  info_mhc_20040101.yml  info_mhc_20080101.yml  info_vlt_20150101.yml
src/lidarpy/nc_convert/: __init__.py  measurement.py  utils.py
src/lidarpy/nc_convert/configs/: ALHAMBRA_20180101.toml  ALHAMBRA_20231121.toml  GENERALIFE_20230101.toml  IPRAL.toml  MULHACEN_20040101.toml  PERICLES.toml
src/lidarpy/plot/: __init__.py  info.yml  quicklook.py  utils.py
src/lidarpy/preprocessing/: __init__.py  gluing_book.py  gluing_de_la_rosa.py  gluing_de_la_rosa_slope.py  gluing_licel.py  gluing_proportional.py  lidar_gluing_bravo_aranda.py  lidar_gluing_damico.py  lidar_linear_response_region.py  lidar_preprocessing.py  lidar_preprocessing_tools.py  study_dead_time.py
src/lidarpy/retrieval/: calibration.py  helper.py  klett.py  lidar_layer_detection.py  overlap.py  raman.py
src/lidarpy/retrieval/synthetic/: generator.py
src/lidarpy/scc/: __init__.py  io.py  scc.py  scc_access.py  scc_deprecated.py  transfer.py  utils.py
src/lidarpy/scc/licel2scc/: diva.py  generic.py  licel.py  licel2scc.py  licel2scc_depol.py  licel_depol.py  licelv2.py
src/lidarpy/scc/plot/: info.yml  plot.py  product.py  retrieval.py  scc_zip.py  utils.py
src/lidarpy/scc/scc_campaigns/: alh_earlinet_daytime.json  earlinet_nighttime.json
src/lidarpy/scc/scc_configFiles/: actris_config.yml  alh_parameters_scc_1003_20241029.yml  alh_parameters_scc_1005_20241029.yml  alh_parameters_scc_1006_20241029.yml  alh_parameters_scc_1007_20241029.yml  alh_parameters_scc_1038_20240101.yml  alh_parameters_scc_1039_20241029.yml  alh_parameters_scc_1040_20240101.yml  alh_parameters_scc_1041_20241029.yml  alh_parameters_scc_729.py  alh_parameters_scc_730.py  alh_parameters_scc_731.py  alh_parameters_scc_771.py  alh_parameters_scc_773_20180101.py  alh_parameters_scc_773_20230721.py  alh_parameters_scc_773_20250331.yml  alh_parameters_scc_774.py  alh_parameters_scc_781_20180101.py  (+11 more)
src/lidarpy/utils/: __init__.py  calibration.py  email.py  file_manager.py  get_reference_range.py  io.py  optimized.py  plot.py  smoothing.py  snr.py  types.py  utils.py
tests/: conftest.py
tests/docs/: test_docs_links.py
tests/nc_convert/: test_dark_current_to_netcdf.py  test_raw_to_netcdf.py
tests/packaging/: test_distribution_artifacts.py  test_distribution_config.py
tests/plot/: test_lidar_3_quicklook_alh.py  test_synthetic_quicklook.py
tests/preprocessing/: test_add_height.py  test_preprocessing_basic_alh.py
tests/retrieval/: test_synthetic_retrieval.py
tests/scc/: test_scc_access_contract.py  test_scc_netcdf_generation.py  test_scc_smoke.py  test_scc_utils.py
tests/synthetic/: test_synthetic_edge_cases.py  test_synthetic_signals.py
tests/utils/: test_general_utils_compatibility.py  test_lidar_1_file_manager.py  test_lidar_6_measurement.py  test_lidar_search_config.py  test_lidar_snr.py
